[package]
name = "sancov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = { version = "0.2.1", optional = true }
sancov-sys = { path = "./sys", version = "0.1.0" }

[features]
hash_increment = ["dep:fxhash"]

[package.metadata.docs.rs]
features = ["hash_increment"]

[workspace]
