[package]
authors = ["The Rust-Fuzz Project Developers"]
description = "Rust bindings to LLVM's `SanitizerCoverage` interface."
documentation = "https://docs.rs/sancov"
edition = "2021"
keywords = ["fuzzing", "fuzz", "coverage", "counters"]
license = "MIT OR Apache-2.0"
name = "sancov"
repository = "https://github.com/rust-fuzz/sancov"
version = "0.1.0"

[dependencies]
fxhash = { version = "0.2.1", optional = true }
sancov-sys = { path = "./sys", version = "0.1.0" }

[features]
hash_increment = ["dep:fxhash"]

[package.metadata.docs.rs]
features = ["hash_increment"]

[workspace]
